--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <title>React App</title>
   </head>
   <body>
+    <header>
+      <img class="meetup" src="./meetup.png" alt="Meetup"/>
+      <p id="city">Find the Events in the City U Wish!</p>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
